k8s/services/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-backend
  namespace: notes-app
spec:
  selector:
    app: notes-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
