k8s/services/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend
  namespace: notes-app
spec:
  selector:
    app: notes-frontend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
