k8s/services/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-postgres
  namespace: notes-app
spec:
  selector:
    app: notes-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
